Add semantics to stage directions

--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter three Witches</i>
+								<i epub:type="z3998:stage-direction">Enter three <b epub:type="z3998:persona">Witches</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -97,7 +97,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Alarum within. Enter DUNCAN, MALCOLM, DONALBAIN, LENNOX, with Attendants, meeting a bleeding Sergeant</i>
+								<i epub:type="z3998:stage-direction">Alarum within. Enter <b epub:type="z3998:persona">DUNCAN</b>, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">DONALBAIN</b>, <b epub:type="z3998:persona">LENNOX</b>, with Attendants, meeting a bleeding <b epub:type="z3998:persona">Sergeant</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -236,7 +236,7 @@
 								<p>
 									<span>So well thy words become thee as thy wounds;</span>
 									<br/>
-									<span>They smack of honour both. Go get him surgeons. <i epub:type="z3998:stage-direction">Exit Sergeant, attended</i></span>
+									<span>They smack of honour both. Go get him surgeons. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Sergeant</b>, attended</i></span>
 									<br/>
 									<span>Who comes here?</span>
 								</p>
@@ -245,7 +245,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter ROSS</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -352,7 +352,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. Enter the three Witches</i>
+								<i epub:type="z3998:stage-direction">Thunder. Enter the three <b epub:type="z3998:persona">Witches</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -478,7 +478,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACBETH and BANQUO</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">BANQUO</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -607,7 +607,7 @@
 									<br/>
 									<span>Upon this blasted heath you stop our way</span>
 									<br/>
-									<span>With such prophetic greeting? Speak, I charge you. <i epub:type="z3998:stage-direction">Witches vanish</i></span>
+									<span>With such prophetic greeting? Speak, I charge you. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Witches</b> vanish</i></span>
 								</p>
 							</td>
 						</tr>
@@ -662,7 +662,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter ROSS and ANGUS</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b> and <b epub:type="z3998:persona">ANGUS</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -763,11 +763,11 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>[Aside] Glamis, and thane of Cawdor!</span>
+									<span><i epub:type="z3998:stage-direction">Aside</i> Glamis, and thane of Cawdor!</span>
 									<br/>
-									<span>The greatest is behind. <i epub:type="z3998:stage-direction">To ROSS and ANGUS</i></span>
+									<span>The greatest is behind. <i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">ROSS</b> and <b epub:type="z3998:persona">ANGUS</b></i></span>
 									<br/>
-									<span>Thanks for your pains. <i epub:type="z3998:stage-direction">To BANQUO</i></span>
+									<span>Thanks for your pains. <i epub:type="z3998:stage-direction">To <b epub:type="z3998:persona">BANQUO</b></i></span>
 									<br/>
 									<span>Do you not hope your children shall be kings,</span>
 									<br/>
@@ -803,7 +803,7 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>[Aside] Two truths are told,</span>
+									<span><i epub:type="z3998:stage-direction">Aside</i> Two truths are told,</span>
 									<br/>
 									<span>As happy prologues to the swelling act</span>
 									<br/>
@@ -843,7 +843,7 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>[Aside] If chance will have me king, why, chance may crown me,</span>
+									<span><i epub:type="z3998:stage-direction">Aside</i> If chance will have me king, why, chance may crown me,</span>
 									<br/>
 									<span>Without my stir.</span>
 								</p>
@@ -865,7 +865,7 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>[Aside] Come what come may,</span>
+									<span><i epub:type="z3998:stage-direction">Aside</i> Come what come may,</span>
 									<br/>
 									<span>Time and the hour runs through the roughest day.</span>
 								</p>
@@ -917,7 +917,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Flourish. Enter DUNCAN, MALCOLM, DONALBAIN, LENNOX, and Attendants</i>
+								<i epub:type="z3998:stage-direction">Flourish. Enter <b epub:type="z3998:persona">DUNCAN</b>, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">DONALBAIN</b>, <b epub:type="z3998:persona">LENNOX</b>, and Attendants</i>
 							</td>
 						</tr>
 						<tr>
@@ -973,7 +973,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACBETH, BANQUO, ROSS, and ANGUS</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, <b epub:type="z3998:persona">BANQUO</b>, <b epub:type="z3998:persona">ROSS</b>, and <b epub:type="z3998:persona">ANGUS</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1094,7 +1094,7 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>[Aside] The Prince of Cumberland! that is a step</span>
+									<span><i epub:type="z3998:stage-direction">Aside</i> The Prince of Cumberland! that is a step</span>
 									<br/>
 									<span>On which I must fall down, or else o'erleap,</span>
 									<br/>
@@ -1138,7 +1138,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter LADY MACBETH, reading a letter</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b>, reading a letter</i>
 							</td>
 						</tr>
 						<tr>
@@ -1210,7 +1210,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a Messenger</i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Messenger</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1253,7 +1253,7 @@
 								<p>
 									<span>Give him tending;</span>
 									<br/>
-									<span>He brings great news. <i epub:type="z3998:stage-direction">Exit Messenger</i></span>
+									<span>He brings great news. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Messenger</b></i></span>
 									<br/>
 									<span>The raven himself is hoarse</span>
 									<br/>
@@ -1294,7 +1294,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACBETH</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1389,7 +1389,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Hautboys and torches. Enter DUNCAN, MALCOLM, DONALBAIN, BANQUO, LENNOX, MACDUFF, ROSS, ANGUS, and Attendants</i>
+								<i epub:type="z3998:stage-direction">Hautboys and torches. Enter <b epub:type="z3998:persona">DUNCAN</b>, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">DONALBAIN</b>, <b epub:type="z3998:persona">BANQUO</b>, <b epub:type="z3998:persona">LENNOX</b>, <b epub:type="z3998:persona">MACDUFF</b>, <b epub:type="z3998:persona">ROSS</b>, <b epub:type="z3998:persona">ANGUS</b>, and Attendants</i>
 							</td>
 						</tr>
 						<tr>
@@ -1429,7 +1429,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter LADY MACBETH</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1528,7 +1528,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Hautboys and torches. Enter a Sewer, and divers Servants with dishes and service, and pass over the stage. Then enter MACBETH</i>
+								<i epub:type="z3998:stage-direction">Hautboys and torches. Enter a Sewer, and divers Servants with dishes and service, and pass over the stage. Then enter <b epub:type="z3998:persona">MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1596,7 +1596,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter LADY MACBETH</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
