--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter BANQUO, and FLEANCE bearing a torch before him</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">BANQUO</b>, and <b epub:type="z3998:persona">FLEANCE</b> bearing a torch before him</i>
 							</td>
 						</tr>
 						<tr>
@@ -62,7 +62,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACBETH, and a Servant with a torch</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, and a Servant with a torch</i>
 							</td>
 						</tr>
 						<tr>
@@ -169,7 +169,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">BANQUO</td>
-							<td>Thanks, sir: the like to you! <i epub:type="z3998:stage-direction">Exeunt BANQUO and FLEANCE</i></td>
+							<td>Thanks, sir: the like to you! <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">BANQUO</b> and <b epub:type="z3998:persona">FLEANCE</b></i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MACBETH</td>
@@ -259,7 +259,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter LADY MACBETH</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -290,7 +290,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MACBETH</td>
-							<td>[Within] Who's there? what, ho!</td>
+							<td><i epub:type="z3998:stage-direction">Within</i> Who's there? what, ho!</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">LADY MACBETH</td>
@@ -311,7 +311,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACBETH</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -537,7 +537,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter LADY MACBETH</i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">LADY MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -598,7 +598,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACDUFF and LENNOX</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACDUFF</b> and <b epub:type="z3998:persona">LENNOX</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -660,7 +660,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACBETH</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -774,7 +774,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter MACDUFF</i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">MACDUFF</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -821,7 +821,7 @@
 									<br/>
 									<span>With a new Gorgon: do not bid me speak;</span>
 									<br/>
-									<span>See, and then speak yourselves. <i epub:type="z3998:stage-direction">Exeunt MACBETH and LENNOX</i> Awake, awake!</span>
+									<span>See, and then speak yourselves. <i epub:type="z3998:stage-direction">Exeunt <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">LENNOX</b></i> Awake, awake!</span>
 									<br/>
 									<span>Ring the alarum-bell. Murder and treason!</span>
 									<br/>
@@ -842,7 +842,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter LADY MACBETH</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -874,7 +874,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter BANQUO</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">BANQUO</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -912,7 +912,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter MACBETH and LENNOX, with ROSS</i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">MACBETH</b> and <b epub:type="z3998:persona">LENNOX</b>, with <b epub:type="z3998:persona">ROSS</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -936,7 +936,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MALCOLM and DONALBAIN</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MALCOLM</b> and <b epub:type="z3998:persona">DONALBAIN</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1035,7 +1035,7 @@
 							<td epub:type="z3998:persona">MALCOLM</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>[Aside to DONALBAIN] Why do we hold our tongues,</span>
+									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">DONALBAIN</b></i> Why do we hold our tongues,</span>
 									<br/>
 									<span>That most may claim this argument for ours?</span>
 								</p>
@@ -1045,7 +1045,7 @@
 							<td epub:type="z3998:persona">DONALBAIN</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>[Aside to MALCOLM] What should be spoken here,</span>
+									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">MALCOLM</b></i> What should be spoken here,</span>
 									<br/>
 									<span>where our fate,</span>
 									<br/>
@@ -1061,7 +1061,7 @@
 							<td epub:type="z3998:persona">MALCOLM</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>[Aside to DONALBAIN] Nor our strong sorrow</span>
+									<span><i epub:type="z3998:stage-direction">Aside to <b epub:type="z3998:persona">DONALBAIN</b></i> Nor our strong sorrow</span>
 									<br/>
 									<span>Upon the foot of motion.</span>
 								</p>
@@ -1071,7 +1071,7 @@
 							<td epub:type="z3998:persona">BANQUO</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Look to the lady: <i epub:type="z3998:stage-direction">LADY MACBETH is carried out</i> And when we have our naked frailties hid,</span>
+									<span>Look to the lady: <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">LADY MACBETH</b> is carried out</i> And when we have our naked frailties hid,</span>
 									<br/>
 									<span>That suffer in exposure, let us meet,</span>
 									<br/>
@@ -1107,7 +1107,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">ALL</td>
-							<td>Well contented. <i epub:type="z3998:stage-direction">Exeunt all but Malcolm and Donalbain.</i></td>
+							<td>Well contented. <i epub:type="z3998:stage-direction">Exeunt all but <b epub:type="z3998:persona">Malcolm</b> and <b epub:type="z3998:persona">Donalbain</b>.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MALCOLM</td>
@@ -1167,7 +1167,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter ROSS and an old Man</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b> and an <b epub:type="z3998:persona">old Man</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1251,7 +1251,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACDUFF</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACDUFF</b></i>
 							</td>
 						</tr>
 						<tr>
