--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. Enter the three Witches</i>
+								<i epub:type="z3998:stage-direction">Thunder. Enter the three <b epub:type="z3998:persona">Witches</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -152,7 +152,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter HECATE to the other three Witches</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">HECATE</b> to the other three <b epub:type="z3998:persona">Witches</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -174,7 +174,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">HECATE retires</i>
+								<i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">HECATE</b> retires</i>
 							</td>
 						</tr>
 						<tr>
@@ -194,7 +194,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACBETH</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -294,7 +294,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. First Apparition: an armed Head</i>
+								<i epub:type="z3998:stage-direction">Thunder. <b epub:type="z3998:persona">First Apparition</b>: an armed Head</i>
 							</td>
 						</tr>
 						<tr>
@@ -344,7 +344,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. Second Apparition: A bloody Child</i>
+								<i epub:type="z3998:stage-direction">Thunder. <b epub:type="z3998:persona">Second Apparition</b>: A bloody Child</i>
 							</td>
 						</tr>
 						<tr>
@@ -386,7 +386,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Thunder. Third Apparition: a Child crowned, with a tree in his hand</i>
+								<i epub:type="z3998:stage-direction">Thunder. <b epub:type="z3998:persona">Third Apparition</b>: a Child crowned, with a tree in his hand</i>
 							</td>
 						</tr>
 						<tr>
@@ -490,7 +490,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">A show of Eight Kings, the last with a glass in his hand; GHOST OF BANQUO following</i>
+								<i epub:type="z3998:stage-direction">A show of Eight Kings, the last with a glass in his hand; <b epub:type="z3998:persona">GHOST OF BANQUO</b> following</i>
 							</td>
 						</tr>
 						<tr>
@@ -521,7 +521,7 @@
 									<br/>
 									<span>For the blood-bolter'd Banquo smiles upon me,</span>
 									<br/>
-									<span>And points at them for his. <i epub:type="z3998:stage-direction">Apparitions vanish</i> What, is this so?</span>
+									<span>And points at them for his. <i epub:type="z3998:stage-direction"><b epub:type="z3998:persona">Apparitions</b> vanish</i> What, is this so?</span>
 								</p>
 							</td>
 						</tr>
@@ -550,7 +550,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Music. The witches dance and then vanish, with HECATE</i>
+								<i epub:type="z3998:stage-direction">Music. The <b epub:type="z3998:persona">witches</b> dance and then vanish, with <b epub:type="z3998:persona">HECATE</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -568,7 +568,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter LENNOX</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LENNOX</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -667,7 +667,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter LADY MACDUFF, her Son, and ROSS</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACDUFF</b>, her Son, and <b epub:type="z3998:persona">ROSS</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -907,7 +907,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a Messenger</i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Messenger</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -957,7 +957,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Murderers</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">Murderers</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1003,7 +1003,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Exit LADY MACDUFF, crying 'Murder!' Exeunt Murderers, following her</i>
+								<i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">LADY MACDUFF</b>, crying 'Murder!' Exeunt <b epub:type="z3998:persona">Murderers</b>, following her</i>
 							</td>
 						</tr>
 					</tbody>
@@ -1020,7 +1020,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MALCOLM and MACDUFF</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MALCOLM</b> and <b epub:type="z3998:persona">MACDUFF</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1456,7 +1456,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a Doctor</i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Doctor</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1481,7 +1481,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MALCOLM</td>
-							<td>I thank you, doctor. <i epub:type="z3998:stage-direction">Exit Doctor</i></td>
+							<td>I thank you, doctor. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Doctor</b></i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">MACDUFF</td>
@@ -1524,7 +1524,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter ROSS</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">ROSS</b></i>
 							</td>
 						</tr>
 						<tr>
