--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a Doctor of Physic and a Waiting-Gentlewoman</i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Doctor</b> of Physic and a <b epub:type="z3998:persona">Waiting-Gentlewoman</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -52,7 +52,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter LADY MACBETH, with a taper</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">LADY MACBETH</b>, with a taper</i>
 							</td>
 						</tr>
 						<tr>
@@ -235,7 +235,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Drum and colours. Enter MENTEITH, CAITHNESS, ANGUS, LENNOX, and Soldiers</i>
+								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">MENTEITH</b>, <b epub:type="z3998:persona">CAITHNESS</b>, <b epub:type="z3998:persona">ANGUS</b>, <b epub:type="z3998:persona">LENNOX</b>, and Soldiers</i>
 							</td>
 						</tr>
 						<tr>
@@ -378,7 +378,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACBETH, Doctor, and Attendants</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, Doctor, and Attendants</i>
 							</td>
 						</tr>
 						<tr>
@@ -412,7 +412,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a Servant</i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Servant</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -459,7 +459,7 @@
 							<td epub:type="z3998:persona">MACBETH</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Take thy face hence. <i epub:type="z3998:stage-direction">Exit Servant</i> Seyton!--I am sick at heart,</span>
+									<span>Take thy face hence. <i epub:type="z3998:stage-direction">Exit <b epub:type="z3998:persona">Servant</b></i> Seyton!--I am sick at heart,</span>
 									<br/>
 									<span>When I behold--Seyton, I say!--This push</span>
 									<br/>
@@ -484,7 +484,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter SEYTON</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">SEYTON</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -621,7 +621,7 @@
 							<td epub:type="z3998:persona">Doctor</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>[Aside] Were I from Dunsinane away and clear,</span>
+									<span><i epub:type="z3998:stage-direction">Aside</i> Were I from Dunsinane away and clear,</span>
 									<br/>
 									<span>Profit again should hardly draw me here. <i epub:type="z3998:stage-direction">Exeunt</i></span>
 								</p>
@@ -641,7 +641,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Drum and colours. Enter MALCOLM, SIWARD and YOUNG SIWARD, MACDUFF, MENTEITH, CAITHNESS, ANGUS, LENNOX, ROSS, and Soldiers, marching</i>
+								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">SIWARD</b> and <b epub:type="z3998:persona">YOUNG SIWARD</b>, <b epub:type="z3998:persona">MACDUFF</b>, <b epub:type="z3998:persona">MENTEITH</b>, <b epub:type="z3998:persona">CAITHNESS</b>, <b epub:type="z3998:persona">ANGUS</b>, <b epub:type="z3998:persona">LENNOX</b>, <b epub:type="z3998:persona">ROSS</b>, and <b epub:type="z3998:persona">Soldiers</b>, marching</i>
 							</td>
 						</tr>
 						<tr>
@@ -756,7 +756,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACBETH, SEYTON, and Soldiers, with drum and colours</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b>, <b epub:type="z3998:persona">SEYTON</b>, and Soldiers, with drum and colours</i>
 							</td>
 						</tr>
 						<tr>
@@ -806,7 +806,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter SEYTON</i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">SEYTON</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -850,7 +850,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a Messenger</i>
+								<i epub:type="z3998:stage-direction">Enter a <b epub:type="z3998:persona">Messenger</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -951,7 +951,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Drum and colours. Enter MALCOLM, SIWARD, MACDUFF, and their Army, with boughs</i>
+								<i epub:type="z3998:stage-direction">Drum and colours. Enter <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">SIWARD</b>, <b epub:type="z3998:persona">MACDUFF</b>, and their Army, with boughs</i>
 							</td>
 						</tr>
 						<tr>
@@ -1008,7 +1008,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Alarums. Enter MACBETH</i>
+								<i epub:type="z3998:stage-direction">Alarums. Enter <b epub:type="z3998:persona">MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1028,7 +1028,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter YOUNG SIWARD</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">YOUNG SIWARD</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1080,7 +1080,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">They fight and YOUNG SIWARD is slain</i>
+								<i epub:type="z3998:stage-direction">They fight and <b epub:type="z3998:persona">YOUNG SIWARD</b> is slain</i>
 							</td>
 						</tr>
 						<tr>
@@ -1098,7 +1098,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Alarums. Enter MACDUFF</i>
+								<i epub:type="z3998:stage-direction">Alarums. Enter <b epub:type="z3998:persona">MACDUFF</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1130,7 +1130,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MALCOLM and SIWARD</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MALCOLM</b> and <b epub:type="z3998:persona">SIWARD</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1177,7 +1177,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACBETH</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACBETH</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1195,7 +1195,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter MACDUFF</i>
+								<i epub:type="z3998:stage-direction">Enter <b epub:type="z3998:persona">MACDUFF</b></i>
 							</td>
 						</tr>
 						<tr>
@@ -1317,7 +1317,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Retreat. Flourish. Enter, with drum and colours, MALCOLM, SIWARD, ROSS, the other Thanes, and Soldiers</i>
+								<i epub:type="z3998:stage-direction">Retreat. Flourish. Enter, with drum and colours, <b epub:type="z3998:persona">MALCOLM</b>, <b epub:type="z3998:persona">SIWARD</b>, <b epub:type="z3998:persona">ROSS</b>, the other Thanes, and Soldiers</i>
 							</td>
 						</tr>
 						<tr>
@@ -1417,7 +1417,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter MACDUFF, with MACBETH's head</i>
+								<i epub:type="z3998:stage-direction">Re-enter <b epub:type="z3998:persona">MACDUFF</b>, with <b epub:type="z3998:persona">MACBETH's</b> head</i>
 							</td>
 						</tr>
 						<tr>
